# Snake-Clone-on-Rust-Bevy

./: README.md  snake.rar
snake/: Cargo.toml
snake/src/: build.rs  main.rs
