[package]
name = "snake"
version = "0.1.0"
authors = ["Nakroxis <ismergn38@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.11"

[dependencies]
bevy ="0.4.0"
rand ="0.8.3"
winres = "0.1.11"
